<resources>
    <string name="app_name">MVPViewer</string>
    <string name="login">登录</string>
    <string name="camera_list">摄像机列表</string>
    <string name="live_play">直播</string>
    <string name="map">地图</string>
    <string name="action_settings">设置</string>
    <string name="title_activity_login">巡更系统</string>

    <string name="guard_name">巡更管理系统</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_login_fragment">Hello login fragment</string>
    <string name="hello_camera_fragment">Hello camera fragment</string>
    <string name="hello_live_fragment">Hello live fragment</string>
    <string name="hello_map_fragment">Hello map fragment</string>

    <string name="title_name">移动视频客户端 V3.0</string>
    <string name="server_name">地址：</string>
    <string name="user_name">用户：</string>
    <string name="user_pwd">密码：</string>
    <string name="remember_pwd">是</string>
    <string name="not_remember_pwd">否</string>
    <string name="login_bt">登录</string>
    <string name="logout_bt">退出</string>
    <string name="if_remember_pwd">记住密码</string>

    <!-- Options Menu -->
    <string name="option_setup">选项设置</string>

    <string name="serverip_key">serverip_key</string>
    <string name="serverip_summary">服务器地址</string>
    <string name="serverip_title">输入服务器地址</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Live Fragment -->
    <string name="live_rstpadr">live_rstpadr</string>


    <!-- V2.0 -->
    <string name="tab_title_live">直播</string>
    <string name="tab_title_kwatch">巡更</string>
    <string name="tab_title_scan">扫码</string>
    <string name="tab_title_exit">退出</string>

</resources>
