<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="cn.zhaoliugang.android.mvpviewer.LoginFragment"
    android:backgroundTintMode="screen"
    android:background="#37383a"
    android:backgroundTint="#e91e2326">

    <!-- TODO: Update blank fragment layout -->

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="75dp"
        android:layout_marginBottom="75dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/bk_tab"
            android:adjustViewBounds="false"
            android:layout_alignParentStart="false" />

        <LinearLayout
            android:id="@+id/id_Layout1"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.13"
            android:layout_marginTop="45dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_name"
                android:textColor="#ffffff"
                android:layout_gravity="center"
                android:id="@+id/tv_title_name"
                android:gravity="center" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/id_Layout2"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/id_Layout1"
            android:layout_marginTop="15dp"
            android:layout_alignParentEnd="false">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:weightSum="1"
                android:layout_marginRight="30dp"
                android:layout_marginLeft="30dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/host_2x"
                    android:src="@drawable/host_2x"
                    android:layout_gravity="center" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/server_name"
                    android:textColor="#ffffff"
                    android:id="@+id/tv_server_name"
                    android:layout_gravity="center" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/et_server_name"
                    android:singleLine="true"
                    android:maxLines="1"
                    android:inputType="textAutoComplete|text"
                    android:layout_gravity="center|top"
                    android:autoText="false" />

            </LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:id="@+id/id_Layout3"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/id_Layout2"
            android:layout_marginTop="15dp">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:weightSum="1"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/users_2x"
                    android:src="@drawable/users_2x"
                    android:layout_gravity="center" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/user_name"
                    android:textColor="#ffffff"
                    android:id="@+id/tv_users_2x"
                    android:layout_gravity="center" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/et_user_name"
                    android:inputType="textAutoComplete"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:layout_gravity="center" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/id_Layout4"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/id_Layout3"
            android:layout_marginTop="15dp">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:weightSum="1"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/key_2x"
                    android:src="@drawable/key_2x"
                    android:layout_gravity="center" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/user_pwd"
                    android:textColor="#ffffff"
                    android:id="@+id/tv_user_pwd"
                    android:layout_gravity="center" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/et_user_pwd"
                    android:singleLine="true"
                    android:password="true"
                    android:maxLines="1"
                    android:inputType="textPassword"
                    android:layout_gravity="center" />

            </LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:id="@+id/id_Layout5"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/id_Layout4"
            android:layout_marginTop="15dp">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:weightSum="1"
                android:clickable="false">

                <Switch
                    android:id="@+id/switch_remember_pwd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#ffffff"
                    android:checked="true"
                    android:showText="false"
                    android:text="@string/if_remember_pwd"
                    android:layout_marginLeft="115dp" />

            </LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:id="@+id/id_Layout6"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/id_Layout5"
            android:layout_marginTop="15dp">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:weightSum="1">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/login_2x"
                    android:src="@drawable/login_2x"
                    android:layout_gravity="center"
                    android:layout_marginLeft="100dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login_bt"
                    android:textColor="#ffffff"
                    android:id="@+id/tv_login_bt"
                    android:layout_gravity="center" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/logout_2x"
                    android:src="@drawable/logout_2x"
                    android:layout_gravity="center"
                    android:layout_marginLeft="15dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/logout_bt"
                    android:textColor="#ffffff"
                    android:id="@+id/tv_logout_bt"
                    android:layout_gravity="center" />

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

</FrameLayout>
