<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:orientation="vertical">

    <!-- 普通底部导航 -->

    <LinearLayout
        android:id="@+id/main_bottom"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <RelativeLayout
            android:id="@+id/relayout_live_id"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onTabClicked"
            android:padding="3dp">

            <RelativeLayout
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true"
                android:gravity="center">

                <ImageView
                    android:id="@+id/tab_live_id"
                    android:layout_width="wrap_content"
                    android:layout_height="28dp"
                    android:layout_centerHorizontal="true"
                    android:background="#ffffff"
                    android:focusable="false"
                    android:scaleType="centerInside"
                    android:src="@drawable/tab_live" />

                <TextView
                    android:id="@+id/tab_txt_live_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tab_live_id"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="3dp"
                    android:text="@string/tab_title_live"
                    android:textColor="@color/color_default_topbar"
                    android:textSize="12sp" />

            </RelativeLayout>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/relayout_kwatch_id"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onTabClicked"
            android:padding="3dp">

            <RelativeLayout
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true"
                android:gravity="center">

                <ImageView
                    android:id="@+id/tab_kwatch_id"
                    android:layout_width="wrap_content"
                    android:layout_height="28dp"
                    android:layout_centerHorizontal="true"
                    android:background="#ffffff"
                    android:focusable="false"
                    android:scaleType="centerInside"
                    android:src="@drawable/tab_kwatch" />

                <TextView
                    android:id="@+id/tab_txt_kwatch_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tab_kwatch_id"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="3dp"
                    android:text="@string/tab_title_kwatch"
                    android:textColor="@color/color_default_topbar"
                    android:textSize="12sp" />

            </RelativeLayout>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/relayout_scan_id"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onTabClicked"
            android:padding="3dp">

            <RelativeLayout
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true"
                android:gravity="center">

                <ImageView
                    android:id="@+id/tab_scan_id"
                    android:layout_width="wrap_content"
                    android:layout_height="28dp"
                    android:layout_centerHorizontal="true"
                    android:background="#ffffff"
                    android:focusable="false"
                    android:scaleType="centerInside"
                    android:src="@drawable/tab_scan" />

                <TextView
                    android:id="@+id/tab_txt_scan_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tab_scan_id"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="3dp"
                    android:text="@string/tab_title_scan"
                    android:textColor="@color/color_default_topbar"
                    android:textSize="12sp" />

            </RelativeLayout>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/relayout_exit_id"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onTabClicked"
            android:padding="3dp">

            <ImageView
                android:id="@+id/tab_exit_id"
                android:layout_width="wrap_content"
                android:layout_height="28dp"
                android:layout_centerHorizontal="true"
                android:background="#ffffff"
                android:focusable="false"
                android:scaleType="centerInside"
                android:src="@drawable/tab_exit" />

            <TextView
                android:id="@+id/tab_txt_exit_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tab_exit_id"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="3dp"
                android:text="@string/tab_title_exit"
                android:textColor="@color/color_default_topbar"
                android:textSize="12sp" />
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>